--- a/Milestone 1/styles.css
+++ b/Milestone 1/styles.css
@@ -7,7 +7,7 @@
 
 body {
   font-family: 'Roboto', sans-serif;
-  background-color: #f0f2f5;
+  background-color: grey;
   color: #333;
   padding: 20px;
   line-height: 1.6;
